@@ -7,7 +7,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import cc.alcina.framework.common.client.cache.CacheFilter;
 import cc.alcina.framework.common.client.cache.CacheQuery;
@@ -22,6 +21,7 @@ import cc.alcina.framework.common.client.search.SearchCriterion;
 import cc.alcina.framework.common.client.search.SearchDefinition;
 import cc.alcina.framework.common.client.util.CommonUtils;
 import cc.alcina.framework.common.client.util.UnsortedMultikeyMap;
+import cc.alcina.framework.entity.MetricLogging;
 
 @RegistryLocation(registryPoint = ClearOnAppRestartLoc.class)
 public class MemcacheSearcher {
@@ -54,6 +54,7 @@ public class MemcacheSearcher {
 		public <T extends HasIdAndLocalId> List<T> list(Class<T> clazz) {
 			Collection<T> values = Registry.impl(SearcherCollectionSource.class)
 					.getCollectionFor(clazz);
+			MetricLogging.get().start("alcina coll");
 			return values.parallelStream().filter(v -> {
 				for (CacheFilter filter : getFilters()) {
 					if (!filter.asCollectionFilter().allow(v)) {
@@ -61,7 +62,7 @@ public class MemcacheSearcher {
 					}
 				}
 				return true;
-			}).collect(Collectors.toList());
+			}).collect(Registry.impl(ListCollector.class).toList());
 		}
 	}
 
